Working on stopping overflow

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ img {
     background-color:#40FFFA;
     color:white;
     text-align:center;
+    /*display: inline-block;*/
 }
 
 .first-div {
@@ -142,8 +143,9 @@ top:10px;
 .header {
     /* left:0;
     bottom:0; */
-    position:relative;
+    /*position:relative;*/
     width: 100%;
+    max-width: 600px;
     right:50px;
     height:100px;
     /* background-color:#40FFFA; */
@@ -161,6 +163,7 @@ top:10px;
 
 .center-content {
     background-color: azure;
+    /*text-size-adjust: auto;*/
     /* padding:-10px; */
 }
 
